* 2007-09-06 - thorben.betten@open-xchange.com

 - Bugfix #6335: Checking for invalid characters in folders.

* 2007-09-05 - marcus.klein@open-xchange.com

 - Bugfix #9252: Fixed checking access permission when getting a task.
 - Bugfix #6335: Checking for invalid characters in tasks.
 - Reopen #8699: Removed listening on localhost to get JMX working again.

* 2007-09-04 - thorben.betten@open-xchange.com

 - Bugfix #8470: Applied provided patch
 - Bugfix #9231: Using Cyrus implementation as fallback for User2IMAP if no
   matching IMAP server implementation could be found and ACLs are not
   supported/turned off

* 2007-09-04 - francico.laguna@open-xchange.com
 
  - Fixed Bug #9204: Participant Notifications emails about tasks now sport
     the default DateFormat (not DateTimeFormat) for the users locale without
     timezone information.
     
  - Fixed Bug #9064: Added update task to fix name collision 
     in personal infostore folder names.
 
  - Fixed Bug #9112: Log filestore exception and provide simpler message
 
* 2007-09-03 - ben.pahne@open-xchange.com
 
  - Fixed Bug 9154: Movings contacts not working
 
* 2007-08-30 - marcus.klein@open-xchange.com

 - Bugfix #7276: Fixed handling for task loading to not miss permission checks.

* 2007-08-31 - thorben.betten@open-xchange.com

 - Bugfix #7862/#9125: Adding library with additional charsets to Java VM
   to solve encoding problems with messages which uses java-foreign charset
   encodings
 - Bugfix #9169: Sorting messages by date fields (either sent date or
   received date) is no more mixed up with ascending/descending order
 - Bugfix #9161: Proper htm2text conversion
 - Bugfix #8699: JMX connector and its rmi data socket get now bound to the
   same address (if configured through server.properties' attribute
   "MonitorJMXBindAddress")

* 2007-08-30 - francisco.laguna@open-xchange.com

 - Bugfix #9159: explicitely initializing infostore document metadat
   with filesize 0 for mail attachments.
