@@ -50,6 +50,15 @@ imapQuoteLineColors=#a14044,#917722,#599351,#516193,#666666
 # Possible value are: session, user.imapLogin and other
 imapCredSrc=session
 
+# This property determines whether a fast fetch is performed on large mail
+# folders or not. Although the fetch is fast on IMAP side, a lot of data is
+# transfered during reading response which cause a temporary memory peak.
+# If disabled only the necessary fields are used as command arguments,
+# which is slower but needs less memory.
+# NOTE: See property "imapMessageFetchLimit" to know which mail folders are
+# treated as large mail folders
+imapFastFetch=true
+
 # Define if IMAP server supports ACLs. Possible values: true/false/auto
 # NOTE: Value "auto" means to use server-defined ACL support as indicated
 # through response to IMAP command "CAPABILITY"
